# conditional-assignment

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: mod.rs
