[package]
name = "conditional-assignment"
version = "0.2.0"
edition = "2021"
description = "This is a very simple, small crate to help make conditional assignments more ergonomic."
authors = ["xohmz"]
repository = "https://github.com/xohmz/conditional-assignment"
rust-version = "1.56.1"
exclude = [".github"]
keywords = ["conditional", "assignment"]
categories = ["no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"

[dependencies]
